--- a/landing/index.html
+++ b/landing/index.html
@@ -11,7 +11,14 @@
     <header class="main-navigation">
         <div class="main-wrapper">
             <img class="logo" src="assets/images/VIABUY-logo.png" />
-            <nav class="main-navigation">
+            <nav class="lang-nav-mobile show-mobile">
+                <img src="assets/images/language-switcher.png" />
+                <ul>
+                    <li>Eng</li>
+                    <li>De</li>
+                </ul>
+            </nav>
+            <nav class="main-navigation hide-mobile">
                 <ul>
                     <li><a href="#">Features</a></li>
                     <li><a href="#">Pricing</a></li>
@@ -19,9 +26,15 @@
                     <li><a href="#">Business</a></li>
                 </ul>
             </nav>
-            <nav class="secondary-navigation">
+            <nav class="secondary-navigation hide-mobile">
                 <ul>
-                    <li><a href="#">Language</a></li>
+                    <li>
+                        <a href="#">Language</a>
+                        <ul class="sub-menu">
+                            <li><a href="#">English</a></li>
+                            <li><a href="#">Deutsch</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#">Activate Card</a></li>
                     <li><a href="#">Log in</a></li>
                 </ul>
@@ -62,7 +75,7 @@
                     <div class="how-to-video">
                         <h6>Learn how to set up Apple Pay:</h6>
                         <div class="how-to-video--item">
-                            <div class="img-holder">
+                            <div class="img-holder open-modal">
                                 <img src="assets/images/apple-pay-video.jpg" alt="Learn how to set up Apple Pay video.">
                             </div>
                         </div>
@@ -77,7 +90,7 @@
     <div class="page-section no-padding-bottom">
         <div class="main-wrapper">
             <div class="row row-gutters">
-                <div class="col-6">
+                <div class="col-6 hide-mobile">
                     <img class="align-right" src="assets/images/apple-pay-app-view.png" alt="VIABUY phone app.">
                 </div>
                 <div class="col-6">
@@ -102,6 +115,9 @@
                             </div>
                     </div>
                 </div>
+                <div class="col-6 show-mobile phone-screen-mobile">
+                        <img class="align-right" src="assets/images/apple-pay-app-view.png" alt="VIABUY phone app.">
+                </div>
             </div>
             <div class="row row-bottom-section">
                 <h5>Use Apple Pay wherever you see one of these symbols.</h5>
@@ -112,14 +128,15 @@
     </div>
     <div class="page-section dark-section">
         <div class="main-wrapper center-content">
-                <h4>No VIABUY Account yet?<br/>Order your card in only a few minutes</h4>
+                <h4>No VIABUY Account yet?<br class="hide-mobile"> Order your card in only a few minutes</h4>
                 <h6>Open your new VIABUY account in an easy paperless signup process from your phone or computer.<br/>Your Mastercard is in the post the next business day.</h6>
                 <a href="#" class="button button-primary">JOIN NOW</a>
         </div>
     </div>
     <footer>
         <div class="main-wrapper">
-            <div class="row">
+            <div class="logo-footer show-mobile"><img src="assets/images/logo-footer.png" alt="VIABUY logo"></div>
+            <div class="row hide-mobile">
                 <div class="col-4">
                     <nav class="footer-nav">
                         <ul>
@@ -140,5 +157,14 @@
             </div>
         </div>
     </footer>
+    <!-- Modal box html -->
+    <div class="modal">
+        <div class="modal-container">
+            <span class="close-modal">&times;</span>
+            <p>Video content here</p>
+        </div>
+    </div>
+
+    <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
