--- a/landing/index.html
+++ b/landing/index.html
@@ -10,50 +10,26 @@
 <body>
     <header class="main-navigation">
         <div class="main-wrapper">
-            <img class="logo" src="assets/images/VIABUY-logo.png" />
-            <nav class="lang-nav-mobile show-mobile">
-                <img src="assets/images/language-switcher.png" />
-                <ul>
-                    <li onclick="return false">
-                        Eng
-                        <ul>
-                            <li><a href="#">Deutsch</a></li>
-                            <li><a href="#">Italiano</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
+            
             <div class="show-mobile nav-burger" onclick="changeMenuClass(this)"></div>
             <nav class="main-navigation hide-mobile">
                 <ul>
-                    <li><a href="#">Features</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Business</a></li>
+                    <li class="active" style="z-index: 5;"><a href="https://www.viabuy.com/the-prepaid-mastercard-in-gold-or-black.html"><span>Home</a></li>
+                    <li style="z-index: 4;"><a href="https://www.viabuy.com/features/the-embossed-prepaid-mastercard.html"><span>Features</span></a></li>
+                    <li style="z-index: 3;"><a href="https://www.viabuy.com/benefits/the-prepaid-credit-card-with-no-credit-check.html"><span>Benefits</span></a></li>
+                    <li style="z-index: 2;"><a href="https://www.viabuy.com/pricing-and-fees.html"><span>Pricing</span></a></li>
+                    <li style="z-index: 1;"><a href="https://www.viabuy.com/service-experience.html"><span>Service</span></a></li>
                 </ul>
             </nav>
-            <nav class="secondary-navigation hide-mobile">
-                <ul>
-                    <li>
-                        <a href="#">Language</a>
-                        <ul class="sub-menu">
-                            <li><a href="#">English</a></li>
-                            <li><a href="#">Deutsch</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">Activate Card</a></li>
-                    <li><a href="#">Log in</a></li>
-                </ul>
-            </nav>
+            <img class="logo" src="assets/images/logo.png" />
         </div>
         <nav id="mobile-menu" class="show-mobile main-nav-mobile">
             <ul>
+                <li><a href="#">Home</a></li>
                 <li><a href="#">Features</a></li>
+                <li><a href="#">Benefits</a></li>
                 <li><a href="#">Pricing</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Business</a></li>
-                <li><a href="#">Activate Card</a></li>
-                <li><a href="#">Log in</a></li>
+                <li><a href="#">Service</a></li>
             </ul>
         </nav>
     </header>
@@ -181,7 +157,7 @@
                     </nav>
                 </div>
                 <div class="col-8">
-                    <img src="assets/images/google-play-badge.png" alt="Get it on Google Play">
+                    <img class="google-play-icon" src="assets/images/google-play-badge.png" alt="Get it on Google Play">
                     <img src="assets/images/app-store-badge.png" alt="Get it on the App Store.">
                     
                     <p>© PPRO Financial Ltd (PPRO). All rights reserved. PPRO is authorised for the issuing of electronic money by the UK Financial Conduct Authority under the Electronic Money Regulations 2011 (FRN900029). VIABUY® is a registered trademark of PPRO. VIABUY Mastercard prepaid credit cards are issued by PPRO pursuant to license by Mastercard International Incorporated. Mastercard® and the Mastercard symbol are registered trademarks of Mastercard International Incorporated.</p>
