Links for the mobile menu

--- a/landing/index.html
+++ b/landing/index.html
@@ -15,7 +15,7 @@
             <nav class="main-navigation hide-mobile">
                 <ul>
                     <li class="active" style="z-index: 5;"><a href="https://www.viabuy.com/the-prepaid-mastercard-in-gold-or-black.html"><span>Home</a></li>
-                    <li style="z-index: 4;"><a href="https://www.viabuy.com/features/the-embossed-prepaid-mastercard.html"><span>Features</span></a></li>
+                    <li style="z-index: 4;"><a href="https://www.viabuy.com/the-prepaid-mastercard-in-gold-or-black.html"><span>Features</span></a></li>
                     <li style="z-index: 3;"><a href="https://www.viabuy.com/benefits/the-prepaid-credit-card-with-no-credit-check.html"><span>Benefits</span></a></li>
                     <li style="z-index: 2;"><a href="https://www.viabuy.com/pricing-and-fees.html"><span>Pricing</span></a></li>
                     <li style="z-index: 1;"><a href="https://www.viabuy.com/service-experience.html"><span>Service</span></a></li>
@@ -25,11 +25,11 @@
         </div>
         <nav id="mobile-menu" class="show-mobile main-nav-mobile">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Benefits</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Service</a></li>
+                <li><a href="https://www.viabuy.com/the-prepaid-mastercard-in-gold-or-black.html">Home</a></li>
+                <li><a href="https://www.viabuy.com/the-prepaid-mastercard-in-gold-or-black.html">Features</a></li>
+                <li><a href="https://www.viabuy.com/benefits/the-prepaid-credit-card-with-no-credit-check.html">Benefits</a></li>
+                <li><a href="https://www.viabuy.com/pricing-and-fees.html">Pricing</a></li>
+                <li><a href="https://www.viabuy.com/service-experience.html">Service</a></li>
             </ul>
         </nav>
     </header>
